--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "0.10.7",
+    "@supabase/auth-helpers-nextjs": "^0.11.0",
     "@supabase/supabase-js": "2.45.4",
     "framer-motion": "11.3.24",
     "lucide-react": "0.446.0",
