--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.11.0",
-    "@supabase/supabase-js": "2.45.4",
-    "framer-motion": "11.3.24",
-    "lucide-react": "0.446.0",
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+ "dependencies": {
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "latest",
+    "next": "14.x",
+    "react": "18.x",
+    "react-dom": "18.x"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
